初始化环境。